# sgj-24

./: .gitignore  CMakeLists.txt  README.md
code/: game.h  game_math.cpp  game_math.h  loader.cpp  loader.h  main.cpp
shader/: postprocess.glsl
